GDHI-11 Fixed broken CSS for the indicator panel <Sonia>

--- a/src/assets/stylesheets/components/indicator-panel/_indicator-panel.scss
+++ b/src/assets/stylesheets/components/indicator-panel/_indicator-panel.scss
@@ -36,12 +36,43 @@
     &-context {
       width: 100%;
       font-family: 'RobotoSlabRegular';
+      &-name {
+        font-size: 12px;
+        padding-left: 6px;
+      }
+      &-details {
+        display: flex;
+        padding: 5px;
+        margin-top: 3px;
+        margin-bottom: 5px;
+        background: $score-background1;
+        &-info {
+          display: inline-block;
+          width: 50%;
+          padding-right: 15px;
+          &-score, &-title {
+            display: block;
+            text-align: center;
+          }
+          &-score {
+            font-size: 18px;
+            font-family: 'RobotoSlabRegular';
+          }
+          &-title {
+            font-size: 11px;
+            font-family: 'RobotoRegular';
+            color: #4A4a4a;
+            padding-top: 3px;
+          }
+        }
+      }
+
       &-section {
         //padding: 5px;
         &-name {
           font-size: 12px;
           height: 22px;
-          background: #F8F8F2;
+          background: $score-background2;
           line-height: 1.5;
           padding-left: 20px;
         }
